--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,7 +15,7 @@ sidebar:
   email: tonyhdezpi@gmail.com
   phone: 312-180-3582
   website: # No agregar http://
-  linkedin: brightcoders
+  linkedin: https://www.linkedin.com/in/antonio-hernandez-pina/
   github: https://github.com/TonyHdez-Pi
   gitlab:
   bitbucket:
